@@ -158,6 +158,7 @@ Those improvements were implemented by Albina Starykova as part of an [Outreachy
  * Fix search tests to correctly reflect behaviour of search backends other than the fallback backend (Matt Westcott)
  * Migrate select all checkbox in simple translation's submit translation page to Stimulus controller `w-bulk`, remove inline script usage (Hanoon)
  * Refactor `SnippetViewSet` to extend `ModelViewSet` (Sage Abdullah)
+ * Migrate initDismissibles behaviour to a Stimulus controller `w-disimissible` (Loveth Omokaro)
 
 
 ## Upgrade considerations
